Resolução do exercício 02

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,6 @@
-<p>card works!</p>
+<!-- <div class="card" [routerLink]="[elemento?.rota]"> -->
+<div class="card">
+  <h2>{{ elemento?.titulo }}</h2>
+  <p>{{ elemento?.mensagem }}</p>
+  <span>{{ elemento?.autor }}</span>
+</div>
