--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer>
+  <p>
+    Desenvolvido por
+    <a href="https://github.com/scheiladev/" target="_blank">Scheila Stihler</a>
+  </p>
+</footer>
