Resolução do exercício 03 e 06

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="card" [routerLink]="[elemento?.rota]"> -->
 <div class="card">
   <h2>{{ elemento?.titulo }}</h2>
-  <p>{{ elemento?.mensagem }}</p>
-  <span>{{ elemento?.autor }}</span>
+  <p>{{ elemento?.descricao }}</p>
+  <span>{{ elemento?.dataEnvio | date : "dd/MM/yyyy" }}</span>
 </div>
