--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,4 +4,9 @@ header {
   background-color: lightslategray;
   color: white;
   text-align: center;
+
+  h1 {
+    margin: 0;
+    font-size: 36px;
+  }
 }
