--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,14 @@
-<!-- <div class="card" [routerLink]="[elemento?.rota]"> -->
-<div class="card">
+<div class="card" [id]="[elemento?.id]">
   <h2>{{ elemento?.titulo }}</h2>
   <p>{{ elemento?.descricao }}</p>
-  <span>{{ elemento?.dataEnvio | date : "dd/MM/yyyy" }}</span>
+  <div>
+    <span
+      >Criado em <i>{{ elemento?.dataEnvio | date : "dd/MM/yyyy" }}</i></span
+    >
+    -
+    <span
+      >Atualizado em
+      <i>{{ elemento?.dataAtualizacao | date : "dd/MM/yyyy" }}</i></span
+    >
+  </div>
 </div>
