--- a/src/app/pages/sugestoes/sugestoes.component.scss
+++ b/src/app/pages/sugestoes/sugestoes.component.scss
@@ -1,7 +1,7 @@
 main {
   max-width: 1200px;
   width: 100%;
-  height: calc(100vh - 140px);
+  min-height: calc(100vh - 150px);
   margin: 0 auto;
   padding: 40px 20px;
   display: flex;
@@ -15,7 +15,7 @@ main {
     gap: 16px;
     margin-bottom: 24px;
     border: 2px solid #ccc;
-    padding: 20px 30px;
+    padding: 20px;
 
     legend {
       font-size: 20px;
